# wasm-perf-analysis

./: README.md  workspace.code-workspace
wasmopencv/: README.md  create_dataset.py  dataset.csv  enviroment.yaml
wasmopencv/detectorsz/: .~lock.LOG_FACE_DETECT_DATASET1_SMALL_LINUX.csv#  CMakeLists.txt  LOG_FACE_DETECT_DATASET1_SMALL_LINUX.csv  LOG_FACE_EYES_DETECT_DATASET1_SMALL_LINUX.csv  META_LOG_FACE_DETECT_DATASET1_SMALL_LINUX.csv  META_LOG_FACE_EYES_DETECT_DATASET1_SMALL_LINUX.csv  runtest.py  runwebapp.py
wasmopencv/detectorsz/desktopapp/: detectorsz_app
wasmopencv/detectorsz/include/detectorsz/: dzapp.hpp
wasmopencv/detectorsz/src/: main.cpp  mat_adapter.cpp  oldmain.cpp
wasmopencv/detectorsz/webapp/: detectorsz_core.data  detectorsz_core.html  detectorsz_core.js  detectorsz_core.wasm  main.html  main.js  test_main_large.html  test_main_medium.html  test_main_small.html
wasmopencv/results/: README.txt  wasm_analise_resultados.ipynb
wasmopencv/results/data/: LOG_FACE_DETECT_DATASET1_LARGE_Chrome_92_Linux.csv  LOG_FACE_DETECT_DATASET1_LARGE_Firefox_91_UNIX.csv  LOG_FACE_DETECT_DATASET1_LARGE_LINUX.csv  LOG_FACE_DETECT_DATASET1_MEDIUM_Chrome_92_Linux.csv  LOG_FACE_DETECT_DATASET1_MEDIUM_Firefox_91_UNIX.csv  LOG_FACE_DETECT_DATASET1_MEDIUM_LINUX.csv  LOG_FACE_DETECT_DATASET1_SMALL_Chrome_92_Linux.csv  LOG_FACE_DETECT_DATASET1_SMALL_Firefox_91_UNIX.csv  LOG_FACE_DETECT_DATASET1_SMALL_LINUX.csv  LOG_FACE_DETECT_DATASET2_LARGE_Chrome_92_Linux.csv  LOG_FACE_DETECT_DATASET2_LARGE_Firefox_91_UNIX.csv  LOG_FACE_DETECT_DATASET2_LARGE_LINUX.csv  LOG_FACE_DETECT_DATASET2_MEDIUM_Chrome_92_Linux.csv  LOG_FACE_DETECT_DATASET2_MEDIUM_Firefox_91_UNIX.csv  LOG_FACE_DETECT_DATASET2_MEDIUM_LINUX.csv  LOG_FACE_DETECT_DATASET2_SMALL_Chrome_92_Linux.csv  LOG_FACE_DETECT_DATASET2_SMALL_Firefox_91_UNIX.csv  LOG_FACE_DETECT_DATASET2_SMALL_LINUX.csv  LOG_FACE_DETECT_DATASET3_LARGE_Chrome_92_Linux.csv  LOG_FACE_DETECT_DATASET3_LARGE_Firefox_91_UNIX.csv  LOG_FACE_DETECT_DATASET3_LARGE_LINUX.csv  LOG_FACE_DETECT_DATASET3_MEDIUM_Chrome_92_Linux.csv  LOG_FACE_DETECT_DATASET3_MEDIUM_Firefox_91_UNIX.csv  LOG_FACE_DETECT_DATASET3_MEDIUM_LINUX.csv  LOG_FACE_DETECT_DATASET3_SMALL_Chrome_92_Linux.csv  LOG_FACE_DETECT_DATASET3_SMALL_Firefox_91_UNIX.csv  LOG_FACE_DETECT_DATASET3_SMALL_LINUX.csv  META_LOG_FACE_DETECT_DATASET1_LARGE_Chrome_92_Linux.csv  META_LOG_FACE_DETECT_DATASET1_LARGE_Firefox_91_UNIX.csv  META_LOG_FACE_DETECT_DATASET1_LARGE_LINUX.csv  (+25 more)
